# Agentic-AI-Researcher

./: README.md  ai_agent.py  ai_researcher.py  app.py  arxiv_tool.py  main.py  pyproject.toml  read_pdf.py
pdf_outputs/: paper_20260119_133351.tex  paper_20260119_185118.tex  paper_20260119_190436.tex
tools/: arxiv_tool.py  write_pdf.py
